<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@drawable/gradient_background"
    android:id="@+id/simpleRelativeLayout">

    <ImageView
        android:id="@+id/logoPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/logo"
        android:maxHeight="200dp"
        android:minHeight="200dp"
        android:minWidth="250dp"
        android:maxWidth="250dp"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoPicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:hint="@string/logoName"
        android:backgroundTint="#000000"
        android:autofillHints="write the name of the logo" tools:targetApi="o" />
    <LinearLayout
        android:id="@+id/linear_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/nextButton"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/timer"
        android:textSize="24sp" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/refresh"
        android:textSize="18sp"
        android:background="@drawable/custom_button"/>
</RelativeLayout>