<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/gradient_background">

    <Button
        android:id="@+id/new_game"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/highscore"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/new_game"
        android:textSize="24sp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/highscore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/highscore"
        android:textSize="24sp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/share"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/share_score"
        android:textSize="24sp"
        android:background="@drawable/custom_button"/>
</RelativeLayout>