<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndGame"
    android:background="@drawable/gradient_background">

    <Button
        android:id="@+id/play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:minWidth="160dp"
        android:text="@string/play_again"
        android:textSize="24sp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_again"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:minWidth="160dp"
        android:text="@string/menu"
        android:textSize="24sp"
        android:background="@drawable/custom_button"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/score"
        android:textSize="30sp"
        />
</RelativeLayout>